# ScientificArticles

./: README.md
dsrc_ptr/impl/: dsrc_ptr.h  dsrc_shared_ptr.h  dsrc_unique_ptr.h  errlog.cpp  errlog.h  main.cpp  shared_ptr_problem.cpp  test.cpp  test.h  test_shared.cpp  test_unique.cpp  tests.h  unit_test.cpp  unit_test.h
states/benchmark/: Results.xlsx
states/benchmark/C++/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  IndexOfFunc.cpp  Logger.cpp  Logger.hpp  Main.cpp  OneFunction.cpp  TenFunction.cpp  TestFunctions.hpp
states/benchmark/C++/archive/: benchmark_cpp_ten_function.txt  results_windows_release_index_of_except.txt  results_windows_release_index_of_state.txt  results_windows_release_one_func_except_enum.txt  results_windows_release_one_func_except_same.txt  results_windows_release_one_func_except_some.txt  results_windows_release_one_func_state_enum.txt  results_windows_release_one_func_state_same.txt  results_windows_release_one_func_state_some.txt  results_windows_release_ten_func_except_enum.txt  results_windows_release_ten_func_except_same.txt  results_windows_release_ten_func_except_some.txt  results_windows_release_ten_func_state_enum.txt  results_windows_release_ten_func_state_same.txt  results_windows_release_ten_func_state_some.txt
states/benchmark/DLang/: benchmark_dlang_index_of.txt  benchmark_dlang_one_function.txt  benchmark_dlang_ten_function.txt  index_of_func.d  one_func.d  ten_func.d
states/benchmark/GoLang/: benchmark_golang_index_of.txt  benchmark_golang_one_function.txt  index_of_func.go  one_func.go  ten_func.go
(+17 files in other folders)
